2008-08-19  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Fix some memory leaks.
	* gtk-gui/objects.xml: Updated.

2008-08-16  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/Style.cs,
	  Mono.TextEditor.Highlighting/IColorDefinition.cs: Worked on styles
	  (fixed 'Bug 405939 - Named colours in colour schemes should have
	  fallbacks').

2008-08-16  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs, Mono.TextEditor/FoldMarkerMargin.cs,
	  Mono.TextEditor/TextEditor.cs: fixed 'Bug 405921 - Folding markers
	  are often not repainted'. Fixed bug on fold marker painting.

2008-08-15  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.mdp, ChangeLogSyntaxMode.xml: Added changelog syntax
	  mode.

2008-08-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DocumentUpdateRequest.cs,
	  Mono.TextEditor/TextEditor.cs: Fixed some drawing issues.

2008-08-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: fixed color style bug.

2008-08-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/CodeSegmentPreviewWindow.cs: optimized text editor
	  code segment preview & fixed some issues with the drag widget.

2008-08-13  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs: fixed "Bug 416564 - Syntax highlighting
	  is lost when reloading a file".

2008-08-13  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditorOptions.cs: changed default setting for new
	  tabs after nontabs option.

2008-08-12  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditorOptions.cs,
	  Mono.TextEditor/DefaultEditActions.cs: fixed "Bug 416089 - Warn
	  about tabs after non-tabs".

2008-08-12  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/CodeSegmentPreviewWindow.cs: fixed "Bug 405912 -
	  Dragged text no longer shows preview".

2008-08-12  Mike Krüger <mkrueger@novell.com> 
