@@ -1,3 +1,9 @@
+2008-08-20  Mike Krüger <mkrueger@novell.com> 
+
+	* Mono.TextEditor/Document.cs, Mono.TextEditor/TextEditor.cs,
+	  Mono.TextEditor/LineSegment.cs: Changed text editor interface
+	  (add/remove marker moved to document).
+
 2008-08-19  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* Mono.TextEditor/TextEditor.cs: Fix some memory leaks.
